--- a/src/app/chameleon-reports/medication-reconciliation/medication-reconciliation.component.html
+++ b/src/app/chameleon-reports/medication-reconciliation/medication-reconciliation.component.html
@@ -1,9 +1,10 @@
 <app-spinner [isLoading]="isLoading"></app-spinner>
-<div class="body">
-  <mat-card class="filter-card" dir="rtl" *ngIf="!isLoading">
+
+<div class="body" *ngIf="!isLoading">
+  <mat-card class="filter-card" dir="rtl">
     <form [formGroup]="filterForm" class="filter-form">
       <div class="filter-fields">
-  
+
         <!-- Department Dropdown -->
         <mat-form-field appearance="fill">
           <mat-label>מחלקה</mat-label>
@@ -12,7 +13,7 @@
             <mat-option *ngFor="let dept of departments" [value]="dept">{{ dept }}</mat-option>
           </mat-select>
         </mat-form-field>
-  
+
         <!-- Start Date -->
         <mat-form-field appearance="fill">
           <mat-label>מתאריך</mat-label>
@@ -20,7 +21,7 @@
           <mat-datepicker-toggle matSuffix [for]="pickerStart"></mat-datepicker-toggle>
           <mat-datepicker #pickerStart></mat-datepicker>
         </mat-form-field>
-  
+
         <!-- End Date -->
         <mat-form-field appearance="fill">
           <mat-label>עד תאריך</mat-label>
@@ -28,60 +29,124 @@
           <mat-datepicker-toggle matSuffix [for]="pickerEnd"></mat-datepicker-toggle>
           <mat-datepicker #pickerEnd></mat-datepicker>
         </mat-form-field>
-  
-      
-     <!-- Global Search -->
-<mat-form-field appearance="fill" style="flex: 1;">
-  <mat-label>חיפוש חופשי</mat-label>
-  <input matInput #globalSearchInput (keyup)="applyGlobalFilter($event)" placeholder="חפש...">
-</mat-form-field>
-        <button mat-raised-button color="primary" (click)="resetFilters()">
-          איפוס מסננים
-        </button>
+
+        <!-- Global Search -->
+        <mat-form-field appearance="fill" style="flex: 1;">
+          <mat-label>חיפוש חופשי</mat-label>
+          <input matInput #globalSearchInput (keyup)="applyGlobalFilter($event)" placeholder="חפש...">
+        </mat-form-field>
+
+        <button mat-raised-button color="primary" (click)="resetFilters()">איפוס מסננים</button>
       </div>
     </form>
   </mat-card>
-  
-<mat-card class="monthly-table-card" dir="rtl" *ngIf="!isLoading">
+  <mat-tab-group>
+    <!-- 🟢 Tab 1: Discharged Patients -->
+    <mat-tab label="מאושפזים ששוחררו">
+ 
 
-  <table mat-table [dataSource]="dataSource" matSort #sort="matSort" class="mat-elevation-z8">
+      <mat-card class="monthly-table-card" dir="rtl">
+        <table mat-table [dataSource]="stillHospitalizedDataSource" matSort #stillSort="matSort" class="mat-elevation-z8">
 
-    <ng-container matColumnDef="Admission_No">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>מספר אשפוז</th>
-      <td mat-cell *matCellDef="let row">{{ row.Admission_No }}</td>
-    </ng-container>
+          <ng-container matColumnDef="Admission_No">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>מספר אשפוז</th>
+            <td mat-cell *matCellDef="let row">{{ row.Admission_No }}</td>
+          </ng-container>
 
-    <ng-container matColumnDef="Admission_Date">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>תאריך קבלה</th>
-      <td mat-cell *matCellDef="let row">{{ row.Admission_Date | date: 'dd/MM/yyyy' }}</td>
-    </ng-container>
+          <ng-container matColumnDef="Admission_Date">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>תאריך קבלה</th>
+            <td mat-cell *matCellDef="let row">{{ row.Admission_Date | date: 'dd/MM/yyyy' }}</td>
+          </ng-container>
 
-    <ng-container matColumnDef="UnitName">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>שם מחלקה</th>
-      <td mat-cell *matCellDef="let row">{{ row.UnitName }}</td>
-    </ng-container>
+          <ng-container matColumnDef="UnitName">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>שם מחלקה</th>
+            <td mat-cell *matCellDef="let row">{{ row.UnitName }}</td>
+          </ng-container>
 
-    <ng-container matColumnDef="ComboText_15536">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> בוצעה סקירה והשוואה של הטיפול התרופתי </th>
-      <td mat-cell *matCellDef="let row">{{ row.ComboText_15536 }}</td>
-    </ng-container>
+          <ng-container matColumnDef="ComboText_15536">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>בוצעה סקירה והשוואה</th>
+            <td mat-cell *matCellDef="let row">{{ row.ComboText_15536 }}</td>
+          </ng-container>
 
-    <ng-container matColumnDef="ComboText_15537">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>  האם למטופל יש POLYPHARMACY ?</th>
-      <td mat-cell *matCellDef="let row">{{ row.ComboText_15537 }}</td>
-    </ng-container>
+          <ng-container matColumnDef="ComboText_15537">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>POLYPHARMACY</th>
+            <td mat-cell *matCellDef="let row">{{ row.ComboText_15537 }}</td>
+          </ng-container>
 
-   
+          <ng-container matColumnDef="UserName_15536">
+            <th mat-header-cell *matHeaderCellDef>הוזן ע״י סקירה</th>
+            <td mat-cell *matCellDef="let row">{{ row.UserName_15536 }}</td>
+          </ng-container>
 
-    <ng-container matColumnDef="Consiliums">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>ייעוץ רוקח קליני</th>
-      <td mat-cell *matCellDef="let row">{{ row.Consiliums }}</td>
-    </ng-container>
+          <ng-container matColumnDef="UserName_15537">
+            <th mat-header-cell *matHeaderCellDef>הוזן ע״י POLYPHARMACY</th>
+            <td mat-cell *matCellDef="let row">{{ row.UserName_15537 }}</td>
+          </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>
+          <ng-container matColumnDef="Consiliums">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>ייעוץ רוקח קליני</th>
+            <td mat-cell *matCellDef="let row">{{ row.Consiliums }}</td>
+          </ng-container>
 
-  <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
-</mat-card>
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+
+        <mat-paginator #stillPaginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+      </mat-card>
+    </mat-tab>
+
+    <!-- 🟡 Tab 2: Still Hospitalized Patients -->
+    <mat-tab label="עדיין מאושפזים">
+      <mat-card class="monthly-table-card" dir="rtl">
+        <table mat-table [dataSource]="stillHospitalizedDataSource" matSort class="mat-elevation-z8">
+
+          <ng-container matColumnDef="Admission_No">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>מספר אשפוז</th>
+            <td mat-cell *matCellDef="let row">{{ row.Admission_No }}</td>
+          </ng-container>
+
+          <ng-container matColumnDef="Admission_Date">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>תאריך קבלה</th>
+            <td mat-cell *matCellDef="let row">{{ row.Admission_Date | date: 'dd/MM/yyyy' }}</td>
+          </ng-container>
+
+          <ng-container matColumnDef="UnitName">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>שם מחלקה</th>
+            <td mat-cell *matCellDef="let row">{{ row.UnitName }}</td>
+          </ng-container>
+
+          <ng-container matColumnDef="ComboText_15536">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>בוצעה סקירה והשוואה</th>
+            <td mat-cell *matCellDef="let row">{{ row.ComboText_15536 }}</td>
+          </ng-container>
+
+          <ng-container matColumnDef="ComboText_15537">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>POLYPHARMACY</th>
+            <td mat-cell *matCellDef="let row">{{ row.ComboText_15537 }}</td>
+          </ng-container>
+
+          <ng-container matColumnDef="UserName_15536">
+            <th mat-header-cell *matHeaderCellDef>הוזן ע״י סקירה</th>
+            <td mat-cell *matCellDef="let row">{{ row.UserName_15536 }}</td>
+          </ng-container>
+
+          <ng-container matColumnDef="UserName_15537">
+            <th mat-header-cell *matHeaderCellDef>הוזן ע״י POLYPHARMACY</th>
+            <td mat-cell *matCellDef="let row">{{ row.UserName_15537 }}</td>
+          </ng-container>
+
+          <ng-container matColumnDef="Consiliums">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>ייעוץ רוקח קליני</th>
+            <td mat-cell *matCellDef="let row">{{ row.Consiliums }}</td>
+          </ng-container>
+
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+
+        <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+      </mat-card>
+    </mat-tab>
+  </mat-tab-group>
 </div>
