--- a/src/app/ApplicationsListDept/applications-list-dept/applications-list-dept.component.html
+++ b/src/app/ApplicationsListDept/applications-list-dept/applications-list-dept.component.html
@@ -1,31 +1,38 @@
 <div class="body">
+    <!-- 🔍 Filter + Actions Form -->
     <form [formGroup]="filterForm" dir="rtl" class="filter-form">
       <div class="form-footer">
-        <!-- 🔍 Global Filter -->
+        <!-- Global Filter -->
         <mat-form-field class="long-search-bar">
           <mat-label>חיפוש</mat-label>
           <input matInput [formControlName]="'globalFilter'" />
         </mat-form-field>
   
-        <!-- 🔄 Reset Filters -->
+        <!-- Reset Filters -->
         <button mat-raised-button color="primary" (click)="resetFilters()" matTooltip="איפוס סינונים">
           <i class="material-icons">refresh</i>
         </button>
   
-        <!-- 📥 Export to Excel -->
-        <img src="../../assets/excel.png" alt="Download" (click)="exportToExcel()" class="download-icon" width="50px" />
+        <!-- Export to Excel -->
+        <img
+          src="../../assets/excel.png"
+          alt="Download"
+          (click)="exportToExcel()"
+          class="download-icon"
+          width="50px"
+        />
       </div>
   
-      <!-- ➕ Add New Application -->
+      <!-- Add Button -->
       <button mat-raised-button color="primary" (click)="openAddDialog()">הוסף יישום חדש</button>
     </form>
   
-    <!-- 📋 Table -->
+    <!-- 📋 Applications Table -->
     <mat-table [dataSource]="matTableDataSource" matSort dir="rtl" class="mat-elevation-z8">
-  
+      
       <!-- 🔁 Dynamic Columns -->
       <ng-container *ngFor="let column of columns" [matColumnDef]="column">
-        <mat-header-cell *matHeaderCellDef mat-sort-header>
+        <mat-header-cell *matHeaderCellDef mat-sort-header [ngClass]="column + '-col'">
           {{ column === 'AppName' ? 'שם' :
              column === 'AppDescription' ? 'הסבר על המערכת' :
              column === 'PrimaryReference' ? 'רפרנט ראשי' :
@@ -33,31 +40,36 @@
              column === 'Remarks' ? 'הערות' :
              column === 'Phones' ? 'טלפונים' :
              column === 'Guides' ? 'מדריכים' :
-             column === 'companyName' ? 'חברה' : column }}
+             column === 'CompanyName' ? 'חברה' :
+             column }}
         </mat-header-cell>
-        <mat-cell *matCellDef="let element">{{ element[column] }}</mat-cell>
+        <mat-cell *matCellDef="let element" [ngClass]="column + '-col'">
+          {{ element[column] }}
+        </mat-cell>
       </ng-container>
   
       <!-- 🛠 Actions Column -->
       <ng-container matColumnDef="actions">
-        <th mat-header-cell *matHeaderCellDef>פעולות</th>
-        <td mat-cell *matCellDef="let element">
+        <mat-header-cell *matHeaderCellDef>פעולות</mat-header-cell>
+        <mat-cell *matCellDef="let element">
           <button mat-icon-button (click)="openEditDialog(element)" matTooltip="עריכה">
             <mat-icon>edit</mat-icon>
           </button>
-        </td>
+        </mat-cell>
       </ng-container>
   
-      <!-- 🧱 Table Rows -->
+      <!-- Row definitions -->
       <mat-header-row *matHeaderRowDef="columns.concat(['actions'])"></mat-header-row>
       <mat-row *matRowDef="let row; columns: columns.concat(['actions'])"></mat-row>
     </mat-table>
   
     <!-- 📄 Paginator -->
-    <mat-paginator *ngIf="matTableDataSource"
-                   [length]="matTableDataSource.data.length"
-                   [pageSize]="5"
-                   [pageSizeOptions]="[15, 50, 100]">
+    <mat-paginator
+      *ngIf="matTableDataSource"
+      [length]="matTableDataSource.data.length"
+      [pageSize]="5"
+      [pageSizeOptions]="[15, 50, 100]"
+    >
     </mat-paginator>
   </div>
   
