--- a/src/app/chameleon-reports/main-surgery/main-surgery-dialog/main-surgery-dialog.component.html
+++ b/src/app/chameleon-reports/main-surgery/main-surgery-dialog/main-surgery-dialog.component.html
@@ -96,7 +96,7 @@
       <mat-icon>picture_as_pdf</mat-icon>&nbsp;PDF
     </button>
     <button mat-raised-button color="primary" (click)="downloadEmlWithPdf()" [disabled]="emails.length === 0">
-      <mat-icon>attach_file</mat-icon>&nbsp;EML עם PDF מצורף
+      <mat-icon>attach_file</mat-icon>&nbsp;EMAIL עם PDF מצורף
     </button>
   </mat-dialog-actions>
 </mat-dialog-content>
