--- a/src/app/chameleon-reports/main-surgery/main-surgery.component.html
+++ b/src/app/chameleon-reports/main-surgery/main-surgery.component.html
@@ -1,3 +1,15 @@
+<app-welcome-splash
+  [durationMs]="5000"
+  [closable]="true"
+  titleText="מערכת יעל"
+  subText="מכין את הדף עבורך…"
+  [backgroundImageUrl]="'assets/back1.jpg'"
+
+  (done)="onSplashDone()">
+</app-welcome-splash>
+
+
+
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
 
 <div class="body">
